[package]
name = "ethash"
version = "1.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
log = "0.3"
keccak-hash = { path = "../util/hash" }
primal = "0.2.3"
parking_lot = "0.4"
crunchy = "0.1.0"
memmap = "0.5.2"
either = "1.0.0"
faster = "*"

[features]
benches = []

[replace]
"https://github.com/rust-lang-nursery/stdsimd.git#stdsimd:0.0.3" = { git = "https://github.com/Vurich/stdsimd.git" }